--- a/pages/index.html
+++ b/pages/index.html
@@ -47,14 +47,13 @@
             align-items: center;
             margin: 10px;
         }
-        
-        footer {
+        /* footer {
             display: flex;
             width: 100%;
             height: 50px;
-        }
+        }*/
         
-        footer ul {
+        footer {
             display: flex;
             width: 100%;
             height: 50px;
@@ -105,12 +104,10 @@
         <img src="modern-flat-vector-illustration-concept-260nw-1144773872.png" alt="">
     </div>
     <footer>
-        <ul>
-            <li id="name"></li>
-            <li id="uroll"></li>
-            <li id="collg"></li>
-            <li id="Date"></li>
-        </ul>
+        <h3>Krishna Saraswat</h3>
+        <h3>201500353</h3>
+        <h3>GLA University, Mathura</h3>
+        <h3>11/7/2001</h3>
     </footer>
 
 </body>
